# SquireDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.04f50bb  CMakeLists.txt.user.c88d552  Cargo.toml  README.md  SquireDesktop.kdev4  SquireDesktop_en_GB.ts  assets_to_header.py  config_test_tournament.tourn  coverage_main.cpp  format.sh  install_linux.sh  main.cpp  mem_tests.py  mem_tests.sh  mtgjson_initial_header.py  squiredesktop.desktop  vcpkg.json  windows.sh
.github/: dependabot.yml
.github/workflows/: coverage.yml  main.yml  memtests.yml  mingw.yml
.kdev4/: SquireDesktop.kdev4
SquireDesktop/: CMakeLists.txt  main.cpp
crash_handler/: config_reader.c  config_reader.h  crash_handler  crash_handler.c  escape_seq.c  escape_seq.h  go.mod  main.go  path_change.c  path_change.h  webhook.go  webhooks.c  webhooks.h
lib/windows_compat/: pthread.h
old_src/: config.h  init.h  main.cpp  timers.cpp  utils.cpp  utils.h
old_src/model/: abstract_tournament.cpp  abstract_tournament.h
old_src/ui/: appdashboardtab.h  appdashboardtab.ui  mainwindow.cpp
old_src/ui/abstractmodels/: playerscoremodel.cpp
old_src/ui/menubar/file/: createtournamentdialogue.h  settingtab.cpp  settingtab.ui
old_src/ui/menubar/rng/: dicerolldialogue.ui  dicerollresultdialogue.h  dicerollresultdialogue.ui  dicerollresultwidget.ui
old_src/ui/tournament/: addplayerdialogue.cpp  roundviewwidget.h  standingsboardwidget.ui  tournamentchangesettingsdialogue.h  tournamentunsavederrordialogue.h  tournamentunsavederrordialogue.ui
old_src/ui/widgets/: recenttournamentwidget.h  searchsorttablewidget.h  searchsorttablewidget.ui
squire_core_bridge/: CMakeLists.txt  Cargo.toml
squire_ffi/: CMakeLists.txt  Cargo.toml  bindgen.py  cbindgen.toml  ffi_build.bat  ffi_build.sh  postprocess.py  squire_core_git_hash.py  squire_ffi.h
squire_ffi/src/: config.rs  ffi_player.rs  ffi_rounds.rs  ffi_tournament.rs  lib.rs  player.rs  rounds.rs  tournament.rs  utils.rs
src/: coins.cpp  coins.h  config.cpp  config.h  ffi_utils.cpp  ffi_utils.h  filerable_list.hpp  init.cpp  io_utils.cpp  io_utils.h  main.cpp  main.rs  player.rs  rounds.rs  runtime.rs  search.cpp  search.h  standings.rs  test_ffi.h  timers.cpp  timers.h  utils.h  utils.rs
src/model/: abstract_tournament.cpp  abstract_tournament.h  mtgjson.cpp  mtgjson.h  player.cpp  player.h  round.cpp  round.h
src/ui/: abstracttabwidget.cpp  abstracttabwidget.h  appdashboardtab.cpp  appdashboardtab.h  appdashboardtab.ui  coinsflipdialogue.cpp  coinsflipdialogue.h  coinsflipdialogue.ui  dicerolldialogue.cpp  dicerolldialogue.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  recenttournamentwidget.cpp  recenttournamentwidget.h  recenttournamentwidget.ui  tournamenttab.cpp  tournamenttab.h  tournamenttab.ui
src/ui/abstractmodels/: playermodel.cpp  playermodel.h  playerscoremodel.cpp  playerscoremodel.h  roundmodel.cpp  roundmodel.h  searchmodel.cpp  searchmodel.h
src/ui/menubar/file/: createtournamentdialogue.cpp  createtournamentdialogue.h  createtournamentdialogue.ui  random_names.cpp  random_names.h  settingtab.cpp  settingtab.h  settingtab.ui
src/ui/menubar/rng/: coinsflipdialogue.cpp  coinsflipdialogue.ui  dicerolldialogue.cpp  dicerolldialogue.ui  dicerollresultdialogue.cpp  dicerollresultdialogue.ui  dicerollresultsdialogue.cpp  dicerollresultsdialogue.h  dicerollresultsdialogue.ui  dicerollresultwidget.cpp  dicerollresultwidget.h  dicerollresultwidget.ui
src/ui/tournament/: addplayerdialogue.h  addplayerdialogue.ui  playerlistwidget.cpp  playerlistwidget.h  playerlistwidget.ui  playerviewwidget.cpp  playerviewwidget.h  playerviewwidget.ui  roundresultwidget.cpp  roundresultwidget.h  roundresultwidget.ui  roundviewwidget.cpp  roundviewwidget.h  roundviewwidget.ui  standingsboardwidget.cpp  standingsboardwidget.h  standingsboardwidget.ui  tournamentchangesettingsdialogue.cpp  tournamentchangesettingsdialogue.h  tournamentchangesettingsdialogue.ui  tournamentchangesettingsdialogue.ui.autosave  tournamentunsavederrordialogue.cpp  tournamentunsavederrordialogue.h
src/ui/utils/: filerable_list.h
src/ui/widgets/: labelimage.cpp  labelimage.h  recenttournamentwidget.cpp  recenttournamentwidget.h  recenttournamentwidget.ui  searchsorttablewidget.cpp  searchsorttablewidget.h  searchsorttablewidget.ui  tablemodel.hpp
tests/: main.cpp  sq_link_test.cpp  sq_link_test.h  test_coins.cpp  test_coins.h  test_config.cpp  test_config.h  test_filter_list.cpp  test_filter_list.h  test_io_utils.cpp  test_io_utils.h  test_search.cpp  test_search.h  test_timers.cpp  test_timers.h  test_utils.cpp  test_utils.h  unit_tests.cpp  unit_tests.h
tests_ffi/: main.cpp  sq_link_test.cpp  test_ffi.cpp  test_ffi.h  test_round_ffi.cpp  test_round_ffi.h  test_tournament_ffi.cpp  test_tournament_ffi.h  tournament_tests.h
