[package]
name = "squire_ffi"
version = "0.1.0-pre-alpha.1"
edition = "2021"
authors = ["TylerBloom <tylerbloom2222@gmail.com>", "Danny Piper <djpiper28@gmail.com>"]
license = "GPL-3.0"

dwarf-version = 4

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
#In-house deps
squire_sdk = { git = "https://github.com/MonarchDevelopment/SquireCore", package = "squire_sdk", no-default-features=true }
squire_lib = { git = "https://github.com/MonarchDevelopment/SquireCore", package = "squire_lib", no-default-features=true }

libc = { version = "0.2" }
dashmap = { version = "5.0", features = ["serde"] }
serde_json = { version = "1.0.96" }
cbindgen = { version = "0.24.5" }
once_cell = { version = "1.18.0" }
chrono = { version = "0.4", features = ["serde"] }

# This ensures that when the program crashes a usable stack trace can be generated
[profile.release]
debug = true
